compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__echo__echo_with_a_case_expression.snap
---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  echo case 1 {\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  echo case 1 {
    _ -> 2
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(case 1 of
        _ ->
            2
    end, nil, ~"project/test/my/mod.gleam", 3).

% ...omitted echo code...
