compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__echo__echo_with_a_function_call.snap
---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  echo wibble(1, 2)\n}\n\nfn wibble(n: Int, m: Int) { n + m }\n"
---
----- SOURCE CODE

pub fn main() {
  echo wibble(1, 2)
}

fn wibble(n: Int, m: Int) { n + m }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-file("project/test/my/mod.gleam", 6).
-spec wibble(integer(), integer()) -> integer().
wibble(N, M) ->
    N + M.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    echo(wibble(1, 2), nil, ~"project/test/my/mod.gleam", 3).

% ...omitted echo code...
