compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__echo__multiple_echos_in_a_pipeline.snap
---
source: compiler-core/src/erlang/tests/echo.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> echo\n  |> wibble\n  |> echo\n  |> wibble\n  |> echo\n}\n\npub fn wibble(n) { n }\n"
---
----- SOURCE CODE

pub fn main() {
  [1, 2, 3]
  |> echo
  |> wibble
  |> echo
  |> wibble
  |> echo
}

pub fn wibble(n) { n }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([wibble/1, main/0]).

-file("project/test/my/mod.gleam", 11).
-spec wibble(J) -> J.
wibble(N) ->
    N.

-file("project/test/my/mod.gleam", 2).
-spec main() -> list(integer()).
main() ->
    _pipe = [1, 2, 3],
    _pipe@1 = echo(_pipe, nil, ~"project/test/my/mod.gleam", 4),
    _pipe@2 = wibble(_pipe@1),
    _pipe@3 = echo(_pipe@2, nil, ~"project/test/my/mod.gleam", 6),
    _pipe@4 = wibble(_pipe@3),
    echo(_pipe@4, nil, ~"project/test/my/mod.gleam", 8).

% ...omitted echo code...
